modules/sandbox/ext/libriscv/examples/webapi/cpp-httplib/modules/gdscript/tests/scripts/analyzer/errors/bitwise_float_left_operand.gd
func test():
	# Error here.
	print(2.2 << 4)
